force-app/main/default/objects/FFX_UAT_Log__c/FFX_UAT_Log__c.object-meta.xml
<CustomObject>
    <description>UAT Log for testing of FinancialForce applications</description>
    <label>UAT Log</label>
    <nameField>
        <displayFormat>UAT{0000}</displayFormat>
        <label>UAT Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>