force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>FFX_Actual_Result__c</fullName>
    <inlineHelpText>Actual outcome of running the test case.</inlineHelpText>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>