force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Business_Process_Area__c.field-meta.xml
<CustomField>
    <fullName>FFX_Business_Process_Area__c</fullName>
    <label>Business Process Area</label>
    <type>TextArea</type>
</CustomField>