force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Date_Run__c.field-meta.xml
<CustomField>
    <fullName>FFX_Date_Run__c</fullName>
    <label>Date Run</label>
    <type>Date</type>
</CustomField>