force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FFX_Days_Overdue__c</fullName>
    <formula>IF( 
AND(
TEXT(
FFX_Status__c)  &lt;&gt; &quot;Complete&quot;,  
FFX_Due_Date__c  &lt;  TODAY() 
)
,TODAY() - FFX_Due_Date__c
, null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>