force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FFX_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>