force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Environment__c.field-meta.xml
<CustomField>
    <fullName>FFX_Environment__c</fullName>
    <inlineHelpText>Org in which the test case is carried out, e.g. UAT Sandbox, Full Sandbox, Production.</inlineHelpText>
    <label>Environment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>