force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>FFX_Expected_Result__c</fullName>
    <inlineHelpText>The expected outcome for a test case to pass.</inlineHelpText>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>