force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>FFX_Failed_Reason__c</fullName>
    <label>Failed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug/ Defect</fullName>
            </value>
            <value>
                <fullName>Missing Functionality</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Security Issue</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Other  (add Notes to Test Manager)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>