force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Notes_to_Test_Manager__c.field-meta.xml
<CustomField>
    <fullName>FFX_Notes_to_Test_Manager__c</fullName>
    <inlineHelpText>Any information relevant to the test case.</inlineHelpText>
    <label>Notes to Test Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>