force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>FFX_Pass_Fail__c</fullName>
    <label>Pass/ Fail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Provisional Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>