force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Priority__c.field-meta.xml
<CustomField>
    <fullName>FFX_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Critical</fullName>
            </value>
            <value>
                <fullName>P2 - High</fullName>
            </value>
            <value>
                <fullName>P3 - Normal</fullName>
            </value>
            <value>
                <fullName>P4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>