force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Products__c.field-meta.xml
<CustomField>
    <fullName>FFX_Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FFA</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>Rev Man</fullName>
            </value>
            <value>
                <fullName>Billing Central</fullName>
            </value>
            <value>
                <fullName>FAM</fullName>
            </value>
            <value>
                <fullName>Spend Management</fullName>
            </value>
            <value>
                <fullName>OPI</fullName>
            </value>
            <value>
                <fullName>Foundations</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>