force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Required_Data__c.field-meta.xml
<CustomField>
    <fullName>FFX_Required_Data__c</fullName>
    <inlineHelpText>Information or data needed in order to complete this task</inlineHelpText>
    <label>Required Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>