force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Task__c.field-meta.xml
<CustomField>
    <fullName>FFX_Task__c</fullName>
    <inlineHelpText>The task you need to complete for testing this feature area.</inlineHelpText>
    <label>Task</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>