force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Task_Steps__c.field-meta.xml
<CustomField>
    <fullName>FFX_Task_Steps__c</fullName>
    <inlineHelpText>Steps that need to be followed to test this task</inlineHelpText>
    <label>Task Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>