force-app/main/default/objects/FFX_UAT_Log__c/fields/FFX_Tester__c.field-meta.xml
<CustomField>
    <fullName>FFX_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who is assigned to carry out this test case.</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UAT_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>