force-app/main/default/objects/FFX_UAT_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FFX_Products__c</columns>
    <columns>FFX_Business_Process_Area__c</columns>
    <columns>FFX_Tester__c</columns>
    <columns>FFX_Due_Date__c</columns>
    <columns>FFX_Status__c</columns>
    <columns>FFX_Pass_Fail__c</columns>
    <columns>FFX_Date_Run__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>